[package]
name = "mls-rs-uniffi-ios"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
 crate_type = ["cdylib", "staticlib"]
 name = "mls_rs_uniffi_ios"

[dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs/", rev = "eeb785c", version = "0.27.0" }
mls-rs = { version = "0.39.0", path = "../mls-rs", features = ["replace_proposal"] }
mls-rs-core = { version = "0.18.0", path = "../mls-rs-core" }
mls-rs-crypto-cryptokit = { version = "0.1.0", path = "../mls-rs-crypto-cryptokit" }

async-trait = "0.1.77"
maybe-async = "0.2.10"
thiserror = "1.0.57"

[target.'cfg(mls_build_async)'.dependencies]
tokio = { version = "1.36.0", features = ["sync"] }