[package]
name = "uniffi-bindgen"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs/", rev = "cd38cce", version = "0.28.0", features = ["cli"] }
